<resources>
    <string name="app_name">Helmet Stability</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment_navigation">Click to open map</string>
    <string name="hello_message">Hello there!</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="verify">Verify</string>
    <string name="otp_verified">OTP Verified</string>
    <string name="next">Next</string>
    <string name="enter_otp_msg">Please check your sms </string>
    <string name="incorrect_otp">X Incorrect OTP</string>
    <string name="enter_details">Please enter the details</string>
    <string name="enter_all_details">Please enter the all details</string>
    <string name="welcome_msg">Welcome\n to\n Helmet Stability</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_phone">Enter phone no.</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_otp">Enter the 6 digit OTP</string>
    <string name="invalid_n_resent_otp">Didn\'t get the OTP? <font color="#C029B2">RESEND OTP.</font></string>
    <string name="regiser_now">Don\’t have an account yet, <font color="#C029B2">Register Now</font></string>
    <string name="login_now">Already have account, <font color="#C029B2">Login Now</font></string>
    <string name="server_error">Internal Server Error</string>
    <string name="name_prompt"><![CDATA[<Profile Name>]]></string>
    <string name="height_prompt">Height(cm)</string>
    <string name="gender_prompt">Gender</string>
    <string name="age_prompt">Age</string>
    <string name="weight_prompt">Weight(kg)</string>
    <string name="current_height">130cm</string>
    <string name="save_prompt">SAVE</string>
    <string name="submit">SUBMIT</string>
    <string name="default_height">130</string>
    <string name="default_weight">30</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="scanning">scanning for devices....</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="Device1">Device 1</string>
    <string name="Device2">Device 2</string>
    <string name="Device3">Device 3</string>
    <string name="conn_status">Connection Status</string>
    <string name="disconnect">Disconnect All</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Scan</string>
    <string name="scan_ble">Scan</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="connect_ble">Connect</string>
    <string name="device1_tv">Helmet</string>
    <string name="device2_tv">Button Box</string>
    <string name="device3_tv">Device 2</string>
    <string name="hr1">Hr1 :</string>
    <string name="hr2">Hr2 :</string>
    <string name="hr3">Hr3 :</string>
    <string name="hr4">Hr4 :</string>
    <string name="hr5">Hr5 :</string>
    <string name="hr6">Hr6 :</string>
    <string name="hr7">Hr7 :</string>
    <string name="hr8">Hr8 :</string>
    <string name="Temp1">T1 :</string>
    <string name="Temp2">T2 :</string>
    <string name="Temp3">T3 :</string>
    <string name="Temp4">T4 :</string>
    <string name="Temp5">T5 :</string>
    <string name="Temp6">T6 :</string>
    <string name="Temp7">T7 :</string>
    <string name="Temp8">T8 :</string>
    <string name="sensation_t">Sensation_T :</string>
    <string name="sensation_h">Sensation_H :</string>
    <string name="belt_hr">HR :</string>
    <string name="gps_speed">Speed :</string>
    <string name="search_keyword">Enter text</string>
    <string name="battery_monitor">Battery Monitor</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="choiceMenu">Choose an option below</string>
    <string name="device1">Device1</string>
    <string name="device2">Device2</string>
    <string name="GPS_speed">GPS Speed</string>
    <string name="enable_gps">Please enable GPS service</string>
    <string name="step_count">Step Count</string>
    <string name="graphOne">Graph 1</string>
    <string name="graphTwo">Graph 2</string>
    <string name="ACCDATA">ACC</string>
    <string name="plot_graph">PLOT_GRAPH</string>
    <string name="GYRDATA">GYR</string>
    <string name="MAGDATA">MAG</string>
    <string name="map_fragment_title">Map Tracker</string>
    <string name="graph_fragment_title">Session Graphs</string>
    <string name="login_fragment_title">Login page</string>
    <string name="device_view_title">BLE Connections</string>
    <string name="profile_view_title">Your Profile</string>
    <string name="activity_type_name">Activity Type</string>
    <string name="last_activity">Session 7</string>
    <string name="activity_duration_name">Activity Duration</string>
    <string name="activity_recorded_data_name">Data Recorded in Activity</string>
    <string name="activity_qty_data_name">Quantity of data recorded</string>
    <string name="sample_bullet_point"><![CDATA[- ]]></string>
    <string name="all_activities">All Activities</string>
    <string name="all_activities_duration">All activities duration</string>
    <string name="all_activities_raw_data_recorded">Number of raw data recorded</string>
    <string name="all_activities_qty_data">Quantity of raw data recorded</string>
    <string name="more_info">Firmware and algo details</string>
    <string name="output_details">OUTPUT of algo under test</string>
    <string name="calender_icon_text">Calendar</string>
    <string name="calendar_fragment_title_text">Calendar</string>
    <string name="calendar_icon_text">Calendar</string>
    <string name="seven_sessions_summary">Session Summaries</string>
    <string name="start_gps_indoor">Indoor</string>
    <string name="start_gps_outdoor">Outdoor</string>
    <string name="close_popup">Close</string>
    <string name="other_sports">OTHER</string>
    <string name="indoor">indoor</string>
    <string name="outdoor">outdoor</string>
    <string name="jumprope">jumprope</string>
    <string name="badminton">badminton</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="default_data_level">50%</string>
    <string name="date_placeholder">Date</string>
    <string name="last_edit_tv">Last edited date</string>
    <string name="delete">DELETE</string>
    <string name="add_note">Add Note</string>
    <string name="save_edit">SAVE</string>
    <string name="time_placeholder">Time</string>
    <string name="session_name">Name</string>
    <string name="duration_placeholder">Duration</string>
    <string name="type_of_data_placeholder">Types of Data</string>
    <string name="size_placeholder">Size</string>
    <string name="text_note">Text Note</string>
    <string name="activity_outdoor">outdoor</string>
    <string name="left_caret"><![CDATA[<]]></string>
    <string name="right_caret"><![CDATA[>]]></string>
    <string name="year_number_placeholder">2020</string>
    <string name="acceleration">acceleration</string>
    <string name="gyroscope">gyroscope</string>
    <string name="magnetometer">magnetometer</string>
    <string name="NO_INTERNET">"Internet is not available. Please enable the internet"</string>
    <string name="log_out_msg">Are you sure you want to log out?</string>
    <string name="stop_activity">Do you want to stop the activity?</string>
    <string name="user_not_exists">Phone number doesn\'t exists. Please register new login.</string>
    <string name="login_details">"Please enter the details"</string>
    <string name="enter_six_digit_otp">Please enter the 6 digit OTP</string>
    <string name="no_valid_phone">"No valid phone number"</string>
    <string name="enter_email_add">Please enter the valid email address</string>
    <string name="enter_phone_num">Please enter the valid phone number</string>
    <string name="use_other_email_id">It seems that email id is used by someone. Please use other email id.</string>
    <string name="connect_helmet_dev">Please connect the Helmet device</string>
    <string name="out_of_memory_dev1">Helmet device\'s memory has less free memory. Please press OK to transfer the data.</string>
    <string name="worn_helmet">"Have you worn helmet properly?"</string>
    <string name="low_storage_alert">Insufficient storage available. Please delete the unnecessary files.</string>
    <string name="firmware">Standard Firmware</string>
    <string name="firmware_version">Version 0.0</string>
    <string name="algorithm_output">Algorithm Output</string>
    <string name="algorithm_output1">123.456</string>
    <string name="algorithm_output2">Header</string>
    <string name="collective_Summary_title_tv">Collective Summary</string>
    <string name="date_value">YYYY/MM/DD</string>
    <string name="time_value">HH:MM:SS</string>
    <string name="size_value">Size</string>
    <string name="page_left"><![CDATA[<]]></string>
    <string name="page_right"><![CDATA[>]]></string>
    <string name="card_heading_placeholder"><![CDATA[<SESSION>]]></string>
    <string name="card_view_default_tv_text"><![CDATA[<Data Line>]]></string>
    <string name="month_calendar" />
    <string name="year_calendar" />
    <string name="month_calleendar" />
    <string name="months">month_calendar</string>
    <string name="years">year_calendar</string>
    <string name="notetype2">TextNote</string>
    <string name="default_text_note">This is a text note. This is a text note. This is  a text note.</string>
    <string name="session_name_desc"><b>Session Name</b></string>
    <string name="activity_type_desc">Activity Type</string>
    <string name="duration_desc">Duration</string>
    <string name="total_data_desc">Total Data (KB)</string>
    <string name="sampling_frequency_desc">Sampling Freq (Hz)</string>
    <string name="note_desc">Note</string>
    <string name="hint_txt">Tap here to add note</string>
    <string name="number_of_sessions_desc">Number of Sessions</string>
    <string name="total_duration_desc">Total Duration</string>
    <string name="activity_types_desc"> Activity Types</string>
    <string name="nine_axis">nine_axis</string>
    <string name="three_axis">three_axis</string>
    <string name="single_measure">single_measure</string>
    <string name="time_measure">TIME(s)</string>
    <string name="types_of_data_desc">Types of Data</string>
    <string name="collective_summary_total_data">Total Data (KB)</string>
    <string name="n_sessions">No. of Sessions</string>
    <string name="activity_indoor">indoor</string>
    <string name="profile_saved">Profile details is saved successfully.</string>
    <string name="DELETE">DELETE</string>
    <string name="remove_photo">Remove profile photo?</string>
    <string name="remove">Remove</string>
    <string name="unsaved_changes_message">If you leave this page, any changes you have made will be lost. Are you sure you wish to leave this page?</string>
</resources>