<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:id = "@+id/map_fragment"
    android:orientation="vertical">

<!--    <com.google.android.gms.maps.MapView-->
<!--        android:id="@+id/map"-->
<!--        android:nestedScrollingEnabled="false"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

    <LinearLayout
        android:id="@+id/session_name_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_toolbar_height"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/date_placeholder"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/time_placeholder"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/session_name"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_duration_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_toolbar_height"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/duration_placeholder"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/activity_type_name"/>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        />

    <LinearLayout
        android:id="@+id/data_received_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_toolbar_height"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_gravity="bottom">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/type_of_data_placeholder"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/size_placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_note_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_toolbar_height"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_gravity="bottom">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_note"/>
    </LinearLayout>

</LinearLayout>

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:background="@color/lightgray"-->
<!--android:id = "@+id/map_fragment"-->
<!--    >-->

<!--&lt;!&ndash;    <com.google.android.gms.maps.MapView&ndash;&gt;-->
<!--&lt;!&ndash;        android:id="@+id/map"&ndash;&gt;-->
<!--&lt;!&ndash;        android:nestedScrollingEnabled="false"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="match_parent"/>&ndash;&gt;-->
<!--<fragment-->
<!--    android:id="@+id/map"-->
<!--    android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    />-->

<!--</FrameLayout>-->
